# py-csdl-explorer

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  test_app.py  test_formatters.py
docs/plans/: 2026-02-08-navigation-graph-design.md  2026-03-05-query-cli-command-design.md  2026-03-05-query-command-implementation.md
samples/: picklist.json  test003.edmx.xml  test004.edmx.xml
src/csdl_explore/: __init__.py  app.py  cli.py  explorer.py  formatters.py  parser.py  repl.py  sap_client.py  themes.py
src/csdl_explore/widgets/: __init__.py  auth_modal.py  connection_panel.py  details_tab.py  entity_pane.py  entity_pane.tcss  entity_tree.py  filter_bar.py  filterable_table.py  global_search.py  json_viewer_modal.py  nav_graph.py  picklist_entities_tab.py  picklist_impact_tab.py  picklist_overview_tab.py  picklist_pane.py  picklist_values_tab.py  properties_tab.py  query_builder.py  query_builder.tcss  query_tab.py  record_view_modal.py  results_viewer.py  search_results.py  welcome_tab.py
tests/: test_explorer.py  test_formatters.py
