[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csdl-explore"
version = "0.1.0"
description = "Terminal explorer for OData CSDL metadata"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["odata", "csdl", "metadata", "tui", "sap", "successfactors"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
tui = [
    "textual>=0.40.0",
]

[project.scripts]
csdl-explore = "csdl_explore.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/csdl_explore"]
